Copilot is thinking...